test/2-errors/dash.test
{
  'code' : 1,
  'err' : '''\
parse error: test/2-errors/dash.ploy:1:2: unexpected character: '\\n'
    -
     ^
'''
}
